Create logic for getting statistic for dashboard for all organizations - create api - create layer bussines logic - create bussines schemas and structure data - also: add error handling, if statistic is not exists (400 and 404 error)
little changes:
- correct annotation for get jwt token
